--- a/pom.xml
+++ b/pom.xml
@@ -10,13 +10,13 @@
 	</parent>
 	<groupId>com.swayam</groupId>
 	<artifactId>spring-boot-basics</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>spring-boot-tutorial</name>
 	<description>Project for understanding basics of Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
-	<dependencies>
+	 <dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -40,6 +40,13 @@
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<!-- PostgreSQL-->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<!--<version>${postgreSQL.version}</version>-->
+			<scope>runtime</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -50,6 +57,10 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		 <dependency>
+			 <groupId>org.springframework.boot</groupId>
+			 <artifactId>spring-boot-starter-actuator</artifactId>
+		 </dependency>
 	</dependencies>
 
 	<build>
