--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,15 +2,94 @@
 server:
   port: 8070
 
-# JPA/DB configurations
 spring:
-  h2:
-    console:
-      enabled: true
+  application:
+    name: boot-basics
+  profiles:
+    active: dev
+
+---
+
+spring:
+  config:
+    activate:
+      on-profile: dev
+# DB configurations
+#  h2:
+#    console:
+#      enabled: true
+#  datasource:
+#    url: jdbc:h2:mem:dcbapp
+#    driverClassName: org.h2.Driver
+#    username: sa
+#    password: password
   datasource:
-    url: jdbc:h2:mem:dcbapp
-    driverClassName: org.h2.Driver
-    username: sa
-    password: password
+    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://localhost:5432/demodb
+    username: demo
+    password: demo
+  # JPA properties
+  jpa:
+    hibernate:
+      ddl-auto: update # When you launch the application for the first time - switch "none" at "create"
+    show-sql: true
+    database: postgresql
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    open-in-view: false
+    generate-ddl: true
+#Actuator
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+        exclude: "beans, env"
+#User defined
+user:
+  welcome:
+    message: Welcome to Spring Boot 3.x !
+  mock:
+    flag: true
 
+---
 
+spring:
+  config:
+    activate:
+      on-profile: qa
+  # DB configurations
+  #  h2:
+  #    console:
+  #      enabled: true
+  #  datasource:
+  #    url: jdbc:h2:mem:dcbapp
+  #    driverClassName: org.h2.Driver
+  #    username: sa
+  #    password: password
+  datasource:
+    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://localhost:5432/demodbqa
+    username: demo
+    password: demo
+  # JPA properties
+  jpa:
+    hibernate:
+      ddl-auto: update # When you launch the application for the first time - switch "none" at "create"
+    show-sql: true
+    database: postgresql
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    open-in-view: false
+    generate-ddl: true
+#Actuator
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+        exclude: "beans, env"
+#User defined
+user:
+  welcome:
+    message: Welcome to Spring Boot 3.x !
+  mock:
+    flag: true
